# pentacorn

./: .gitmodules  CMakeLists.txt  README.md  uc.c
include/: config-host.h
qemu/include/exec/: cpu-defs.h
qemu/include/tcg/: tcg-op.h  tcg.h
qemu/tcg/: tcg-op-vec.c  tcg-target.h  tcg-target.inc.c
src/: rv.c  rv.h
